# compiler_in_hs

./: .gitignore  CHANGELOG.md  LICENSE  compiler-in-hs.cabal  nfa2dfa_refined.hs  prettyprint_of_example_data
app/: Main.hs
src/: Automaton.hs  Grammar.hs  Nfa2dfa.hs
