cabal-version:      3.0
name:               compiler-in-hs

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

homepage:           https://github.com/fyshxfish/compiler_in_hs

-- The license under which the package is released.
license:            MIT

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             fyshxfish

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         fyshx121120@gmail.com

-- A copyright notice.
-- copyright:
category:           Development
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable compiler-in-hs
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Automaton

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1, containers >= 0.6

    -- Directories containing source files.
    hs-source-dirs:   app, src

    -- Base language which the package is written in.
    default-language: Haskell2010

library
    hs-source-dirs:      src        
    exposed-modules:     Nfa2dfa    
    build-depends:       base >=4.7 && <5, containers >= 0.6
    default-language:    Haskell2010

test-suite tests
    -- Test files.
    main-is:          TestMain.hs

    -- Modules included in this test suite.
    other-modules:    TestNfa2dfa

    -- Directories containing source files for tests.
    hs-source-dirs:   test, src

    -- Language setting.
    default-language: Haskell2010

    -- Dependencies needed for testing.
    build-depends:
        base ^>=4.17.2.1,
        containers >= 0.6,
        tasty >= 1.4,
        tasty-hunit >= 0.10

    -- Test type.
    type:             exitcode-stdio-1.0
